--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script type="text/javascript">window.location.href="www.aday.ml";</script>
+<meta http-equiv="refresh" content="0" url="https://www.aday.ml">
