--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0" url="https://www.aday.ml">
+<head> <meta http-equiv="refresh" content="0;url=https://www.aday.ml"> </head>
